--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,12 @@ yarn-error.log*
 # local env files
 .env*.local
 .env
+.env*.production
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+package-lock.json
