--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
     "@hookform/resolvers": "^3.3.1",
+    "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.2.0",
     "@radix-ui/colors": "^2.1.0",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -42,6 +43,7 @@
     "jsonwebtoken": "^9.0.2",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
+    "nodemailer": "^6.9.5",
     "numeral": "^2.0.6",
     "pino": "^8.15.1",
     "pino-pretty": "^10.2.0",
@@ -54,6 +56,7 @@
     "react-icons": "^4.10.1",
     "react-medium-image-zoom": "^5.1.8",
     "react-multi-carousel": "^2.8.4",
+    "react-otp-input": "^3.1.0",
     "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-wrap-balancer": "^1.1.0",
