--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint-config-next": "13.4.19",
+    "framer-motion": "^10.16.4",
     "husky": "^8.0.3",
     "jsonwebtoken": "^9.0.2",
     "next": "13.4.19",
