--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "framer-motion": "^10.16.4",
     "husky": "^8.0.3",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.284.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "nodemailer": "^6.9.5",
@@ -51,6 +52,7 @@
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-cropper": "^2.3.3",
+    "react-day-picker": "^8.8.2",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
