--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-cropper": "^2.3.3",
     "react-day-picker": "^8.8.2",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
