--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/typography": "^0.5.9",
     "@types/bunyan": "^1.8.8",
@@ -68,6 +69,7 @@
     "react-wrap-balancer": "^1.1.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "stripe": "^13.9.0",
     "swiper": "^10.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
