--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "pino": "^8.15.1",
     "pino-pretty": "^10.2.0",
     "postcss": "8.4.28",
+    "raw-body": "^2.5.2",
     "react": "18.2.0",
     "react-cropper": "^2.3.3",
     "react-day-picker": "^8.8.2",
