--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.36.1",
@@ -68,6 +70,7 @@
     "react-otp-input": "^3.1.0",
     "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
+    "react-slider": "^2.0.6",
     "react-wrap-balancer": "^1.1.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
@@ -82,6 +85,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/react-slider": "^1.3.2",
     "@types/redux-logger": "^3.0.9",
     "@types/redux-persist": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
