--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
     "@hookform/resolvers": "^3.3.1",
+    "@mux/mux-node": "^7.3.2",
+    "@mux/mux-player-react": "^2.0.1",
     "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.2.0",
     "@radix-ui/colors": "^2.1.0",
