--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
     "@hookform/resolvers": "^3.3.1",
-    "@mux/mux-node": "^7.3.2",
-    "@mux/mux-player-react": "^2.0.1",
     "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.2.0",
     "@radix-ui/colors": "^2.1.0",
@@ -66,6 +64,7 @@
     "react-medium-image-zoom": "^5.1.8",
     "react-multi-carousel": "^2.8.4",
     "react-otp-input": "^3.1.0",
+    "react-player": "^2.13.0",
     "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-wrap-balancer": "^1.1.0",
