--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
+    "@headlessui/react": "^1.7.17",
     "@hookform/resolvers": "^3.3.1",
     "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.2.0",
@@ -68,6 +69,7 @@
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-medium-image-zoom": "^5.1.8",
     "react-multi-carousel": "^2.8.4",
     "react-otp-input": "^3.1.0",
@@ -78,6 +80,7 @@
     "react-wrap-balancer": "^1.1.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.2",
     "stripe": "^13.9.0",
     "swiper": "^10.2.0",
     "tailwind-merge": "^1.14.0",
@@ -85,7 +88,8 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "uploadthing": "^5.5.2",
-    "zod": "^3.22.2"
+    "zod": "^3.22.2",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.2",
