--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-ecommerce-uit",
+  "name": "Open Real Estate Platform",
   "version": "0.1.0",
   "private": true,
   "scripts": {
